# phase-accumulator-network-research

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: metrics.md  pan_paper.md  wan_paper.md
docs/drafts/: 00_pan_paper.md  01_pan_paper_v2.md  02_pan_paper_companion.md  03_pan_paper_v3.md  04_pan_paper_v4.md  05_pan_paper_v5.md  wan_paper.md  (+1 more)
experiments/: compare.yaml  decoder_analysis.yaml  decoder_swap.yaml  dw_sweep.yaml  example.yaml  freq_init_ablation.yaml  held_out_p97_long.yaml  held_out_primes.yaml  init_random_primary_k.yaml  k4_run.yaml  k6-10_sweep.yaml  k8_sweep.yaml  k9-10_sweep.yaml  k_census_n20.yaml  k_sweep.yaml  mod_mul.yaml  mod_two_step.yaml  paper_cross_primes.yaml  paper_k13_fourier.yaml  paper_k13_random.yaml  paper_k5_extended.yaml  primes.yaml  primes_primary_k.yaml  random_init_census_20.yaml  sifp16_inference.yaml  slot_census.yaml  sweep_b.yaml  sweep_c.yaml  tf_sweep.yaml  tier3.yaml  wan_compare.yaml  wan_k_sweep.yaml  wan_mask_init_ablation.yaml  wan_parity.yaml  wan_popcount_mod4.yaml  wan_rotl.yaml  wan_xor_two.yaml  wd_sweep.yaml
notebooks/: 01_diffusion_investigation.ipynb  02_nanda_grokking.ipynb  03_pan_grokking_walkthrough.ipynb  compare_experiment.ipynb
pan_lab/: __init__.py  __main__.py  analysis.py  cli.py  config.py  data.py  decoder_analysis.py  experiments.py  grid_sweep.py  hooks.py  metrics.py  plots.py  reporting.py  trainer.py  training_dynamics.py
scripts/: paper_extract.py  paper_v5_figures.py
tests/: conftest.py  test_analysis_and_quant.py  test_data.py  test_experiments.py  test_gradient_flow.py  test_grid_sweep_parallel.py  test_manifest_generation.py  test_metrics.py  test_models.py  test_plots.py  test_reporting.py  test_save_model.py  test_trainer.py  test_training_dynamics.py  test_wan.py
(+33 files in other folders)
